--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Tutorial</title>
-<body>
+<body background-color: powderblue> 
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-
-
-<!DOCTYPE html>
-<html>
-<title>HTML Tutorial</title>
-<body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1 style="color:#FFF;"> This is a heading</h1>
+<p style="color:red;">This is a paragraph.</p>
 
 </body>
+
+
+</html>
